# make_your_own_template

./: .gitignore  dockerfile  pyproject.toml
.streamlit/: config.toml
src/myot/: app.py
src/myot/backend/: directory_template.py  dockerfile_template.py  mappings.py  pyproject_template.py
src/myot/frontend/: app.py
src/myot/generate_dockerfile/: base_images.py  dockerfile_template.py  llm_call.py
